--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
 - 5.4
 deploy:
   provider: heroku
+  buildpack: https://github.com/ddollar/heroku-buildpack-multi.git
   api_key:
     secure: Dcv8fTlkWYSUMufGWQRbY/0lGMcdUTyjO24Oqet4Or9fmy7yMqO+U1C90sTTJU96JGBkUKY9A6I2CZiSh5x+PKbYNTrKrvepfqfqoItveAKcHPEtgqg0glxSxtbUSR9Q6iHluJZE+XMWyRlHzFCeMoOEZQkv53FrZyngqr+CDMQ=
   app:
