--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteRule ^oeuvre/([^/]+)\/?$ /oeuvre.php?oeuvre=$1 [L]
-RewriteRule ^lecture/([^/]+)\/?$ /lecture.php?oeuvre=$1 [L]
+RewriteRule ^fiche/([^\.\/]+)\/?$ /fiche.php?oeuvre=$1 [L]
+RewriteRule ^([^\.\/]+)\/?$ /lecture.php?oeuvre=$1 [L]
